components/argocd/ingresses/argocd-ingress.yaml
# TODO: set tls

# Before expose to ALB, run:
# kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "NodePort"}}'
# Recommend: enable tls, set your backend port to 443
# else: add --insecure flag to argocd-server deploy (spec.containers.command)

# add these lines to your argocd-cmd-params-cm to use subpath:
#   server.basehref: /argo
#   server.rootpath: /argo

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: integrated
  name: argocd
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /argo
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            pathType: Prefix
